--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,21 @@
       <!-- <hr> -->
       <!-- <app-servers></app-servers> -->
       <!--<div app-servers></div>-->
-      <!--<div class="app-servers"></div>-->
-      <app-basics-homework></app-basics-homework>
+      <!-- <div class="app-servers"></div> -->
+      <!-- <app-basics-homework></app-basics-homework> -->
+
+      <h2>My Servers</h2>
+      <button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
+      <br><br>
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let server of servers; let i = index"
+          (click)="onRemoveServer(i)"
+        >
+          {{ server }}
+        </li>
+      </ul>
     </div>
   </div>
 </div>
